// Copyright Â© 2017 The Things Network Foundation, distributed under the MIT license (see LICENSE file)

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package ttn.v3;

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

// TokenKeyRequest is the request for a specific token key.
message TokenKeyRequest {
  // key id used for token rotation.
  string kid = 1 [(gogoproto.customname) = "KID"];
}

message TokenKeyResponse {
  // public key that is used to sign the tokens. PEM-encoded string.
  string public_key = 1;

  // key id used for token rotation.
  string kid = 2 [(gogoproto.customname) = "KID"];

  // algorithm used for this token.
  string algorithm = 3;
}


// TokenKeyProvider is a service that can return the public keys used to sign the JWT tokens
// used for authentication on the network.
// The provider uses one key-pair at a time but, is allowed to rotate them and therefore should be able to
// serve the token keys from old key-pairs to make sure older tokens can be validated.
// To denote which key-pair a token is signed with, it sets the kid (key-id) header, entities that want to
// validate these tokens can use the kid to fetch the correct token key.
service TokenKeyProvider {
  // GetTokenKey gets the token public key for with the specified kid.
  rpc GetTokenKey(TokenKeyRequest) returns (TokenKeyResponse);
}
